@@ -81,7 +81,15 @@ lists, treating them as if they were vectors."
   (:method ((lhs number) (rhs list))
     (loop for i in rhs collect (cl:+ lhs i)))
   (:method ((lhs list) (rhs number))
-    (loop for i in lhs collect (cl:+ rhs i))))
+    (loop for i in lhs collect (cl:+ rhs i)))
+  (:method ((lhs number) (rhs matrix))
+    (let ((result (make-matrix (matrix-rows rhs)
+			       (matrix-cols rhs))))
+      (do-each-matrix-element (item rhs row col)
+	(setf (matrix-elt result row col) (+ item lhs)))
+      result))
+  (:method ((lhs matrix) (rhs number))
+    (c+ rhs lhs)))
 
 (defgeneric c- (lhs rhs)
   (:documentation "Subtracts objects.")
@@ -105,7 +113,16 @@ lists, treating them as if they were vectors."
   (:method ((lhs number) (rhs list))
     (loop for i in rhs collect (cl:- lhs i)))
   (:method ((lhs list) (rhs number))
-    (loop for i in lhs collect (cl:- i rhs))))
+    (loop for i in lhs collect (cl:- i rhs)))
+  (:method ((lhs number) (rhs matrix))
+    (let ((result (make-matrix (matrix-rows rhs)
+			       (matrix-cols rhs))))
+      (do-each-matrix-element (item rhs row col)
+	(setf (matrix-elt result row col) (- lhs item)))
+      result))
+  (:method ((lhs matrix) (rhs number))
+    (c- (- rhs) lhs)))
+    
 
 (defgeneric c* (lhs rhs)
   (:documentation "multiplies two objects together.")
@@ -129,7 +146,15 @@ lists, treating them as if they were vectors."
 	(setf (elt result i) (cl:* el rhs)))
       result))
   (:method ((lhs list) (rhs number))
-    (loop for i in lhs collect (cl:* i rhs))))
+    (loop for i in lhs collect (cl:* i rhs)))
+  (:method ((lhs number) (rhs matrix))
+    (let ((result (make-matrix (matrix-rows rhs)
+			       (matrix-cols rhs))))
+      (do-each-matrix-element (item rhs row col)
+	(setf (matrix-elt result row col) (* lhs item)))
+      result))
+  (:method ((lhs matrix) (rhs number))
+    (c* rhs lhs)))
 
 (defgeneric c/ (lhs rhs)
   (:documentation "Divides two objects.")
@@ -153,7 +178,19 @@ lists, treating them as if they were vectors."
 	(setf (elt result i) (cl:/ el rhs)))
       result))
   (:method ((lhs list) (rhs number))
-    (loop for i in lhs collect (cl:/ i rhs))))
+    (loop for i in lhs collect (cl:/ i rhs)))
+  (:method ((lhs number) (rhs matrix))
+    (let ((result (make-matrix (matrix-rows rhs)
+			       (matrix-cols rhs))))
+      (do-each-matrix-element (item rhs row col)
+	(setf (matrix-elt result row col) (cl:/ lhs item)))
+      result))
+  (:method ((lhs matrix) (rhs number))
+    (let ((result (make-matrix (matrix-rows lhs)
+			       (matrix-cols lhs))))
+      (do-each-matrix-element (item lhs row col)
+	(setf (matrix-elt result row col) (cl:/ item rhs)))
+      result)))
 
 (create-vector-operation-method c+ cl:+)	; Add two vector.
 (create-vector-operation-method c- cl:-)	; Subtract two vectors.
